--- a/notebooks/MoodSense_Training.ipynb
+++ b/notebooks/MoodSense_Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,32 +11,17 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Anxious       0.00      0.00      0.00       1.0\n",
-      "       Happy       0.00      0.00      0.00       1.0\n",
-      "         Sad       0.00      0.00      0.00       0.0\n",
+      "       Angry       1.00      1.00      1.00         9\n",
+      "     Anxious       1.00      1.00      1.00        10\n",
+      "     Excited       1.00      1.00      1.00        14\n",
+      "       Happy       1.00      1.00      1.00         5\n",
+      "     Neutral       1.00      1.00      1.00        12\n",
+      "         Sad       1.00      1.00      1.00        10\n",
       "\n",
-      "    accuracy                           0.00       2.0\n",
-      "   macro avg       0.00      0.00      0.00       2.0\n",
-      "weighted avg       0.00      0.00      0.00       2.0\n",
+      "    accuracy                           1.00        60\n",
+      "   macro avg       1.00      1.00      1.00        60\n",
+      "weighted avg       1.00      1.00      1.00        60\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/macm1/Downloads/MoodSense/.venv/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/macm1/Downloads/MoodSense/.venv/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/macm1/Downloads/MoodSense/.venv/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/macm1/Downloads/MoodSense/.venv/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/macm1/Downloads/MoodSense/.venv/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/macm1/Downloads/MoodSense/.venv/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     },
     {
@@ -45,7 +30,7 @@
        "['../app/model.pkl']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,19 +39,19 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import LinearSVC\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import classification_report\n",
     "import joblib\n",
     "\n",
-    "data = pd.read_csv('../data/sample_journals.csv')\n",
+    "data = pd.read_csv('../data/expanded_journals.csv')\n",
     "X = data['text']\n",
     "y = data['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "pipeline = Pipeline([\n",
     "    ('tfidf', TfidfVectorizer()),\n",
-    "    ('clf', LogisticRegression(max_iter=200))\n",
+    "    ('clf', LinearSVC())\n",
     "])\n",
     "\n",
     "pipeline.fit(X_train, y_train)\n",
