--- a/notebooks/MoodSense_Training.ipynb
+++ b/notebooks/MoodSense_Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -30,34 +30,43 @@
        "['../app/model.pkl']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "import joblib\n",
+    "import pandas as pd\n",
     "\n",
+    "# Load dataset\n",
     "data = pd.read_csv('../data/expanded_journals.csv')\n",
     "X = data['text']\n",
     "y = data['label']\n",
+    "\n",
+    "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
+    "# Create pipeline\n",
     "pipeline = Pipeline([\n",
     "    ('tfidf', TfidfVectorizer()),\n",
     "    ('clf', LinearSVC())\n",
     "])\n",
     "\n",
+    "# Train\n",
     "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
     "y_pred = pipeline.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))\n",
-    "joblib.dump(pipeline, '../app/model.pkl')"
+    "\n",
+    "# Save model\n",
+    "joblib.dump(pipeline, '../app/model.pkl')\n"
    ]
   },
   {
